--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0"; url="https://nirabpaudel.com">
+    <meta http-equiv="refresh" content="0 url=https://nirabpaudel.com">
     <title>Redirecting...</title>
   </head>
   <body>
